Add_Two_Nums/#*shell*#
Wed Dec 25 11:02:41 PM EST 2024
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ ls
example.h  example.h~  main.cc  main.cc~  Makefile
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ make
g++ -g -c main.cc -o main.o
In file included from main.cc:7:
example.h: In function ‘ListNode* createNode(int)’:
example.h:37:12: error: invalid conversion from ‘int’ to ‘ListNode*’ [-fpermissive]
   37 |     return 1;
      |            ^
      |            |
      |            int
example.h:40:11: error: request for member ‘data’ in ‘newNode’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   40 |   newNode.data = data;
      |           ^~~~
example.h:41:11: error: request for member ‘next’ in ‘newNode’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   41 |   newNode.next = NULL;
      |           ^~~~
example.h: In function ‘void printList(Node*)’:
example.h:50:38: error: request for member ‘data’ in ‘current’, which is of pointer type ‘Node*’ (maybe you meant to use ‘->’ ?)
   50 |     fprintf(stdout, "$d ->", current.data);
      |                                      ^~~~
example.h:51:23: error: request for member ‘next’ in ‘current’, which is of pointer type ‘Node*’ (maybe you meant to use ‘->’ ?)
   51 |     current = current.next;
      |                       ^~~~
example.h: In function ‘void freeList(ListNode*)’:
example.h:62:24: error: request for member ‘next’ in ‘current’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   62 |     nextNode = current.next;
      |                        ^~~~
main.cc: In function ‘ListNode* addTwoNumbers(ListNode*, ListNode*)’:
main.cc:21:1: warning: no return statement in function returning non-void [-Wreturn-type]
   21 | }
      | ^
main.cc: In function ‘int main(int, const char**)’:
main.cc:45:14: error: request for member ‘next’ in ‘first_head’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   45 |   first_head.next = first_second;
      |              ^~~~
main.cc:46:16: error: request for member ‘next’ in ‘first_second’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   46 |   first_second.next = first_tail;
      |                ^~~~
main.cc:48:15: error: request for member ‘next’ in ‘second_head’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   48 |   second_head.next = second_second;
      |               ^~~~
main.cc:49:17: error: request for member ‘next’ in ‘second_second’, which is of pointer type ‘ListNode*’ (maybe you meant to use ‘->’ ?)
   49 |   second_second.next = second_tail;
      |                 ^~~~
main.cc:54:13: error: cannot convert ‘ListNode*’ to ‘Node*’
   54 |   printList(first_head);
      |             ^~~~~~~~~~
      |             |
      |             ListNode*
example.h:47:29: note:   initializing argument 1 of ‘void printList(Node*)’
   47 | void printList(struct Node* head){
      |                ~~~~~~~~~~~~~^~~~
main.cc:60:11: error: ‘stdount’ was not declared in this scope; did you mean ‘stdout’?
   60 |   fprintf(stdount, "\n\n Second List\n\n");
      |           ^~~~~~~
      |           stdout
main.cc:61:13: error: cannot convert ‘ListNode*’ to ‘Node*’
   61 |   printList(second_head);
      |             ^~~~~~~~~~~
      |             |
      |             ListNode*
example.h:47:29: note:   initializing argument 1 of ‘void printList(Node*)’
   47 | void printList(struct Node* head){
      |                ~~~~~~~~~~~~~^~~~
make: *** [Makefile:18: main.o] Error 1
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ ls
example.h  example.h~  main.cc  main.cc~  Makefile
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ make
g++ -g -c main.cc -o main.o
In file included from main.cc:7:
example.h: In function ‘ListNode* createNode(int)’:
example.h:40:14: error: ‘struct ListNode’ has no member named ‘data’
   40 |   (*newNode).data = data;
      |              ^~~~
example.h: In function ‘void printList(Node*)’:
example.h:50:31: error: invalid use of incomplete type ‘struct Node’
   50 |     fprintf(stdout, "$d ->", (*current).data);
      |                              ~^~~~~~~~~
example.h:47:23: note: forward declaration of ‘struct Node’
   47 | void printList(struct Node* head){
      |                       ^~~~
example.h:51:16: error: invalid use of incomplete type ‘struct Node’
   51 |     current = (*current).next;
      |               ~^~~~~~~~~
example.h:47:23: note: forward declaration of ‘struct Node’
   47 | void printList(struct Node* head){
      |                       ^~~~
main.cc: In function ‘ListNode* addTwoNumbers(ListNode*, ListNode*)’:
main.cc:21:1: warning: no return statement in function returning non-void [-Wreturn-type]
   21 | }
      | ^
main.cc: In function ‘int main(int, const char**)’:
main.cc:54:13: error: cannot convert ‘ListNode*’ to ‘Node*’
   54 |   printList(first_head);
      |             ^~~~~~~~~~
      |             |
      |             ListNode*
example.h:47:29: note:   initializing argument 1 of ‘void printList(Node*)’
   47 | void printList(struct Node* head){
      |                ~~~~~~~~~~~~~^~~~
main.cc:60:11: error: ‘stdount’ was not declared in this scope; did you mean ‘stdout’?
   60 |   fprintf(stdount, "\n\n Second List\n\n");
      |           ^~~~~~~
      |           stdout
main.cc:61:13: error: cannot convert ‘ListNode*’ to ‘Node*’
   61 |   printList(second_head);
      |             ^~~~~~~~~~~
      |             |
      |             ListNode*
example.h:47:29: note:   initializing argument 1 of ‘void printList(Node*)’
   47 | void printList(struct Node* head){
      |                ~~~~~~~~~~~~~^~~~
make: *** [Makefile:18: main.o] Error 1
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ exit
exit

Process shell exited abnormally with code 2
Wed Dec 25 11:07:11 PM EST 2024
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ make
g++ -g -c main.cc -o main.o
In file included from main.cc:7:
example.h: In function ‘void printList(Node*)’:
example.h:50:31: error: invalid use of incomplete type ‘struct Node’
   50 |     fprintf(stdout, "$d ->", (*current).data);
      |                              ~^~~~~~~~~
example.h:47:23: note: forward declaration of ‘struct Node’
   47 | void printList(struct Node* head){
      |                       ^~~~
example.h:51:16: error: invalid use of incomplete type ‘struct Node’
   51 |     current = (*current).next;
      |               ~^~~~~~~~~
example.h:47:23: note: forward declaration of ‘struct Node’
   47 | void printList(struct Node* head){
      |                       ^~~~
main.cc: In function ‘ListNode* addTwoNumbers(ListNode*, ListNode*)’:
main.cc:21:1: warning: no return statement in function returning non-void [-Wreturn-type]
   21 | }
      | ^
main.cc: In function ‘int main(int, const char**)’:
main.cc:54:13: error: cannot convert ‘ListNode*’ to ‘Node*’
   54 |   printList(first_head);
      |             ^~~~~~~~~~
      |             |
      |             ListNode*
example.h:47:29: note:   initializing argument 1 of ‘void printList(Node*)’
   47 | void printList(struct Node* head){
      |                ~~~~~~~~~~~~~^~~~
main.cc:60:11: error: ‘stdount’ was not declared in this scope; did you mean ‘stdout’?
   60 |   fprintf(stdount, "\n\n Second List\n\n");
      |           ^~~~~~~
      |           stdout
main.cc:61:13: error: cannot convert ‘ListNode*’ to ‘Node*’
   61 |   printList(second_head);
      |             ^~~~~~~~~~~
      |             |
      |             ListNode*
example.h:47:29: note:   initializing argument 1 of ‘void printList(Node*)’
   47 | void printList(struct Node* head){
      |                ~~~~~~~~~~~~~^~~~
make: *** [Makefile:18: main.o] Error 1
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ exit
exit

Process shell exited abnormally with code 2
Wed Dec 25 11:07:55 PM EST 2024
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ make
g++ -g -c main.cc -o main.o
In file included from main.cc:7:
example.h: In function ‘void printList(ListNode*)’:
example.h:50:21: warning: too many arguments for format [-Wformat-extra-args]
   50 |     fprintf(stdout, "$d ->", (*current).data);
      |                     ^~~~~~~
main.cc: In function ‘ListNode* addTwoNumbers(ListNode*, ListNode*)’:
main.cc:21:1: warning: no return statement in function returning non-void [-Wreturn-type]
   21 | }
      | ^
main.cc: In function ‘int main(int, const char**)’:
main.cc:60:11: error: ‘stdount’ was not declared in this scope; did you mean ‘stdout’?
   60 |   fprintf(stdount, "\n\n Second List\n\n");
      |           ^~~~~~~
      |           stdout
make: *** [Makefile:18: main.o] Error 1
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ exit
exit

Process shell exited abnormally with code 2
Wed Dec 25 11:08:37 PM EST 2024
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ make
g++ -g -c main.cc -o main.o
main.cc: In function ‘ListNode* addTwoNumbers(ListNode*, ListNode*)’:
main.cc:21:1: warning: no return statement in function returning non-void [-Wreturn-type]
   21 | }
      | ^
main.cc: In function ‘int main(int, const char**)’:
main.cc:60:11: error: ‘stdount’ was not declared in this scope; did you mean ‘stdout’?
   60 |   fprintf(stdount, "\n\n Second List\n\n");
      |           ^~~~~~~
      |           stdout
make: *** [Makefile:18: main.o] Error 1
shahzad@shahzad-Inspiron-5675:~/Desktop/Code/C_Code/Learning C/Add_Two_Nums$ 